# Changelog

## (01/07/23)

· 👌 IMPROVE: Games > Duke Nukem 3D (Eduke32) for 64 bits

## (17/06/23)

· 👌 IMPROVE: Games > SMario 64 Plus for 64 bits by Morsgame with tons of improvements.

## (03/06/23)

· 📦 ADD: Games > Fallout 2.

## (17/05/23)

· 👌 IMPROVE: Games > MAME 0.254 for 32/64 bits BullsEye & Buster.

## (30/04/23)

· 👌 IMPROVE: Games > Serious Sam 1.10.4-1: Classic, Vulkan Ed. for arm64 (armhf soon).

## (25/03/23)

· 📦 ADD: Server > Block IPs using Iptables.
· 👌 IMPROVE: Scripts Server > Media Server, Emulators > GBA. Some minor fixes.

## (20/03/23)

· 👌 IMPROVE: New relases: Scrcopy v2.0 for 64 bits (Audio support for Android 11+).

## (14/03/23)

· 👌 IMPROVE: Config > Vulkan Driver 22.3.7 for 32/64 bits.

## (10/03/23)

· 👌 IMPROVE: Emulators > RetroArch Update cores & 1.15.0-1 for 32/64 bits.

## (9/03/23)

· 👌 IMPROVE: Config > Vulkan Driver 22.3.7 for 32/64 bits.

## (22/01/23)

· 👌 IMPROVE: Server > Update Web Server with PHP 8.2 & Nginx 1.23.3.
· ❌ REMOVE: Owncloud.

## (16/01/23)

· 👌 IMPROVE: Emulators > RetroArch Update cores & 1.14.0-1 (arm64).

## (13/01/23)

· 👌 IMPROVE: Emulators > RetroArch Update cores & 1.14.0-1 (armhf).

## (6/11/22)

· 👌 IMPROVE: Games > OpenXCOM 1.0.a379 for 32/64 bits.

## (5/11/22)

· 👌 IMPROVE: Games > Quake > Quakespasm 0.95 for 32/64 bits.

## (13/10/22)

· 👌 IMPROVE: Config > Change Vulkan driver to compile 22.2 (stable branch)

## (7/10/22)

· 📦 ADD: Emulators > Add VICE Commodore 64 emu for 32/64 bits.
· 👌 IMPROVE: Emulators > RetroArch 1.11.1-1. Added Buster 32 bits support.

## (18/09/22)

· 📦 ADD: Emulators > Flycast for 32/64 bits.

## (03/09/22)

· 👌 IMPROVE: Emulators > MAME 0.247 for 32/64 bits.

## (19/08/22)

· 👌 IMPROVE: Games > Super Mario 64 for 64 bits.

## (16/08/22)

· 👌 IMPROVE: Emulators > ScummVM bump to 2.7.0 for 32/64 bits.

## (06/08/22)

· 👌 IMPROVE: Emulators > MAME bump to 0.246.

## (30/07/22)

· 🐛 FIX: Games > Serious Sam.

## (21/07/22)

· 🐛 FIX: Emulators > PS1 (DuckStation).
